// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders closed shell with no active item 1`] = `
<modal-mock>
  <aside
    className="root"
  >
    <div
      className="header"
    >
      <span
        className="headerText"
      >
        Edit Item
      </span>
      <button
        className="closeButton"
        onClick={[MockFunction]}
      >
        <span
          className="root"
        >
          <svg
            className="icon"
            fill="none"
            height="24"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </span>
      </button>
    </div>
  </aside>
</modal-mock>
`;

exports[`renders open drawer with active item 1`] = `
<modal-mock>
  <aside
    className="root_open"
  >
    <div
      className="header"
    >
      <span
        className="headerText"
      >
        Edit Item
      </span>
      <button
        className="closeButton"
        onClick={[MockFunction]}
      >
        <span
          className="root"
        >
          <svg
            className="icon"
            fill="none"
            height="24"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      className="body"
    >
      <ProductDetail
        item={
          Object {
            "id": "123",
            "name": "Simple Product",
          }
        }
      />
      <ProductForm
        item={
          Object {
            "id": "123",
            "name": "Simple Product",
          }
        }
      />
    </div>
  </aside>
</modal-mock>
`;
